--- a/Site.html
+++ b/Site.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    {% load static %}
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title></title>
-    <link rel="stylesheet" href="{% static 'Style/hw.css' %}">
+    <link rel="stylesheet" href="Site.css">
 </head>
 <body>
     <!-- <div class="top">
