changed the path image to a new

--- a/Site.html
+++ b/Site.html
@@ -24,7 +24,7 @@
     </div> -->
 
     <div class="img">
-        <img class="image" src="{% static 'image/dance-women.jpeg' %}">
+        <img class="image" src="image/dance-women.jpeg">
         <p class="text1">WIND</p><br>
         <p class="dash">- - - - - - - - - - - - - - - - - - - -</p><br>
         <p class="text2">Бесплатный HTML шаблон</p><br>
@@ -38,12 +38,12 @@
             <p class="text-services" style="margin-left: 10px;">Осведомленность о бренде, анализирую результаты рекламной компании, специфицирует потребительский фирменый стиль</p>
         </div>
         <div class="cube-name" style="background-color: white;">
-            <img class="image1" src="{% static 'image/calendar.png' %}" width="100px ">
+            <img class="image1" src="image/calendar.png" width="100px ">
             <p class="audit"><a href="#">Аудит</a></p>
             <p class="text3">Осведомленность о бренде, анализирую результаты рекламной компании, специфицирует потребительский фирменый стиль</p>
         </div>
         <div class="cube-name" style="background-color: white;">
-            <img class="image1" src="{% static 'image/twitter.png' %}" width="100px ">
+            <img class="image1" src="image/twitter.png" width="100px ">
             <p class="front"><a href="#">Фронтенд</a></p>
             <p class="text3">Осведомленность о бренде, анализирую результаты рекламной компании, специфицирует потребительский фирменый стиль</p>
         </div>
@@ -57,12 +57,12 @@
             <p class="text-purposes" style="margin-left: 10px;">Осведомленность о бренде, анализирую результаты рекламной компании, специфицирует потребительский фирменый стиль</p>
         </div>
         <div class="cube-name" style="background-color: white;">
-            <img class="image1" src="{% static 'image/smartphone-call.png' %}" width="100px ">
+            <img class="image1" src="image/smartphone-call.png" width="100px ">
             <p class="backend"><a href="#">Бекэнд</a></p>
             <p class="text3">Осведомленность о бренде, анализирую результаты рекламной компании, специфицирует потребительский фирменый стиль</p>
         </div>
         <div class="cube-name" style="background-color: white;">
-            <img class="image1" src="{% static 'image/clock.png' %}" width="100px ">
+            <img class="image1" src="image/clock.png" width="100px ">
             <p class="project"><a href="#">Проектирование</a></p>
             <p class="text3">Осведомленность о бренде, анализирую результаты рекламной компании, специфицирует потребительский фирменый стиль</p>
         </div>
